# Respawn

./: .gitignore  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  PROBE.md  README.md  RECOVERYBENCH.md  RESULT.md  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: method.md
examples/: demo.py  demo_llm.py
examples/ambiguous_pipeline/: README.md  run.py  stages.py
examples/csv_insights/: README.md  demo.py  pipeline.py  sales.csv
experiments/: _stats.py  run_probe.py  run_recoverybench.py  run_recoverylab.py  whoandwhen.py
probe/: __init__.py  continuation.py  verify.py
recoverybench/: __init__.py  controllers.py  model.py  simulate.py
recoverylab/: __init__.py  agent.py  engine.py
respawn/: __init__.py  core.py  failures.py  llm.py  policy.py  recover.py  strategies.py
tests/: test_ambiguous_pipeline.py  test_core.py  test_csv_insights.py  test_llm.py  test_probe.py  test_recover.py  test_recoverybench.py  test_recoverylab.py
