[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "respawn"
version = "0.1.0"
description = "Adaptive recovery for AI agents: re-enter at the step that caused the failure, not the one that crashed."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [{ name = "harshittaneja" }]
keywords = ["llm", "agents", "reliability", "failure-attribution", "durable-execution", "recovery"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []   # core library is dependency-free

[project.urls]
Homepage = "https://github.com/H2908/respawn"
Repository = "https://github.com/H2908/respawn"
Issues = "https://github.com/H2908/respawn/issues"

[project.optional-dependencies]
bench = ["numpy>=1.24", "matplotlib>=3.7"]
dev = ["pytest>=7", "ruff>=0.5", "numpy>=1.24", "matplotlib>=3.7"]

[tool.hatch.build.targets.wheel]
packages = ["respawn", "recoverybench", "probe", "recoverylab"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I"]   # errors, pyflakes, import-order
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"examples/*" = ["E701", "E702"]   # compact illustrative one-liners are fine in demos